configure docker-composer